--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>SHPP</title>
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/style.css">
-	<script src="//use.typekit.net/rfj2zqn.js"></script>
+	<script src="https://use.typekit.net/rfj2zqn.js"></script>
 	<script>try{Typekit.load();}catch(e){}</script>
 	<script src="https://code.jquery.com/jquery.min.js"></script>
 	<script src="js/app.js"></script>
