--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
 	<title>SHPP</title>
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/style.css">
-	<script src="//use.typekit.net/rfj2zqn.js"></script>
-	<script>try{Typekit.load();}catch(e){}</script>
+	<!--<script src="//use.typekit.net/rfj2zqn.js"></script>-->
+	<!--<script>try{Typekit.load();}catch(e){}</script>-->
+	<link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,300,600' rel='stylesheet' type='text/css'>
 	<script src="https://code.jquery.com/jquery.min.js"></script>
 	<script src="js/app.js"></script>
 </head>
@@ -19,7 +20,7 @@
 	<div class="container">
 		<div class="list-row">
 			<div class="enter-item">
-				<p class="enter-text">Enter item to add to list</p>
+				<input id="list-imput" type="text" name="list imput" placeholder="Enter item to add to list">
 			</div>
 			<div class="list-item">
 				<div class="list-data">
