--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 			</div>
 			<div class="list-item">
 				<div class="list-data">
-					<p class="list-text">Apples</p><span class="grey-delete-icon"></span>
+					<p class="list-text">Coke</p><span class="grey-delete-icon"></span>
 				</div>
 			</div>
 			<div class="list-item-added">
@@ -38,19 +38,9 @@
 					<span class="green-added-icon"></span><p class="list-text-added">Red Bull</p><span class="grey-delete-icon"></span>
 				</div>
 			</div>
-			<div class="list-item-added">
-				<div class="list-data-added">
-					<span class="green-added-icon"></span><p class="list-text-added">Oranges</p><span class="grey-delete-icon"></span>
-				</div>
-			</div>
-			<div class="list-item-added">
-				<div class="list-data-added">
-					<span class="green-added-icon"></span><p class="list-text-added">Peaches</p><span class="grey-delete-icon"></span>
-				</div>
-			</div>
 			<div class="delete">
 				<div class="delete-row">
-					<p class="delete-text">Delete</p><span class="delete-icon"></span>
+					<p class="delete-text">Delete</p><span id="delete-icon"></span>
 				</div>
 			</div>
 		</div>
